⛳️😅 Checkpoint ./css/style.css:31916058/337

--- a/css/style.css
+++ b/css/style.css
@@ -2851,4 +2851,21 @@ body {
     margin-top: 100px;
   }
 }
+::-webkit-scrollbar {
+  width: 10px;
+}
 
+/* Track */
+::-webkit-scrollbar-track {
+  background: #353353;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: white;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #4985ef;
+}
