--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ h4 {
 }
 
 a {
-  color: #FF4C60;
+  color: #00ff00;
   outline: 0;
   -webkit-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
