--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,11 @@ Author URI: https://avipatilweb.me/
 html {
   margin: 0 !important;
   overflow: auto !important;
+  user-select: none; /* supported by Chrome and Opera */
+   -webkit-user-select: none; /* Safari */
+   -khtml-user-select: none; /* Konqueror HTML */
+   -moz-user-select: none; /* Firefox */
+   -ms-user-select: none; /* Internet Explorer/Edge */
 }
 
 body {
