👞🗃 Checkpoint ./index.html:31916058/394 ./css/style.css:31916058/37

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ html {
    -khtml-user-select: none; /* Konqueror HTML */
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
+  scroll-behavior: smooth;
 }
 
 body {
